--- a/css/footer.css
+++ b/css/footer.css
@@ -4,6 +4,7 @@ footer{
     min-height: 140px;
     background-color: aliceblue;
     margin-top: 40px;
+    margin-bottom: 0px;
 }
 
 .footer-text {
@@ -31,4 +32,16 @@ footer{
     gap: 20px;
     margin-top: 12px;
     text-align: center;
+}
+
+@media (max-width: 868px) {
+    .footer-text button{
+        font-size: 12px;
+        padding: 5px;
+        width: 40%;
+        height: 30px;
+    }
+    .rights-and-social{
+        font-size: 15px;
+    }
 }
