--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,7 @@
+@import url(/css/footer.css);
+@import url(/css/header.css);
+@import url(/css/note-upload.css);
+
 * {
     padding: 0;
     margin: 0;
@@ -21,7 +25,6 @@
   .full-page-container {
     max-width: 100vw;
     width: 100%;
-    padding: 5px;
     min-height: 100vh;
     height: 100%;
     background-image:-webkit-linear-gradient(125deg, rgb(156, 224, 114),rgb(110, 162, 241))
