--- a/css/global.css
+++ b/css/global.css
@@ -21,6 +21,10 @@
       list-style: none;
     }
   }
+
+    html,body{
+        overflow-x:hidden;
+    }
   
   .full-page-container {
     max-width: 100vw;
