--- a/css/note-upload.css
+++ b/css/note-upload.css
@@ -49,9 +49,42 @@
   }
 }
 
+.notes-catagory {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  column-gap: 20px;
+  margin-block: 5px;
+  background-color: rgb(237, 206, 195);
+  min-height: 40px;
+  border-radius: 30px;
+}
+
+.notes-catagory select {
+  background-color: #c8deeb;
+  padding: 5px;
+  color: rgb(30, 27, 27);
+}
+
+.notes-catagory select option {
+  padding: 5px;
+}
+
 @media (max-width: 600px) {
   .note-upload-section {
-      width: 100%;
-      border-radius: 0px;
+    width: 100%;
+    border-radius: 0px;
+    font-size: 15px;
+  }
+
+  .notes-catagory{
+    column-gap: 5px;
+  }
+
+  .notes-catagory select {
+    padding: 1px;
+    padding-bottom: 4px;
+    border-radius: 12px;
   }
 }
